--- a/frontend/src/styles/shared/header.css
+++ b/frontend/src/styles/shared/header.css
@@ -88,7 +88,7 @@
 .review-button {
   display: flex;
   align-items: center;
-  background-color: var(--background);
+  background-color: var(--background-like);
   color: var(--text);
   border: 1px solid var(--accent);
   border-radius: 4px;
@@ -124,7 +124,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: var(--text);
+  color: var(--text-dark);
   width: 32px;
   height: 32px;
   border-radius: 50%;
