--- a/frontend/src/styles/views/home/faceted-search.css
+++ b/frontend/src/styles/views/home/faceted-search.css
@@ -38,7 +38,7 @@
   padding: 0.75rem;
   border: 1px solid var(--accent);
   border-radius: var(--border-radius);
-  background-color: var(--background);
+  background-color: var(--background-like);
   appearance: none;
   background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
   background-repeat: no-repeat;
@@ -59,7 +59,7 @@
 }
 
 .filter-group select:disabled {
-  background-color: var(--background);
+  background-color: var(--background-like);
   cursor: not-allowed;
   opacity: 0.7;
 }
@@ -77,8 +77,8 @@
 
 .search-results-button {
   background-color: var(--primary);
-  color: white;
-  font-weight: 600;
+  color: var(--text-light);
+  font-weight: 500;
   padding: 0.875rem 2rem;
   border: none;
   border-radius: var(--border-radius);
