--- a/frontend/src/styles/views/home/search-dropdown.css
+++ b/frontend/src/styles/views/home/search-dropdown.css
@@ -10,7 +10,7 @@
   gap: 10px;
   justify-content: center;
   align-items: stretch;
-  background-color: var(--primary-light);
+  background-color: var(--secondary-dark);
   padding: 15px;
   border-radius: var(--border-radius);
   box-shadow: var(--shadow);
@@ -33,7 +33,7 @@
   padding: 12px 15px;
   border-radius: var(--border-radius);
   border: 1px solid var(--accent);
-  background-color: var(--background);
+  background-color: var(--background-like);
   font-size: 14px;
   color: var(--text-dark);
   appearance: none;
