--- a/frontend/src/styles/views/auth/profile.css
+++ b/frontend/src/styles/views/auth/profile.css
@@ -270,7 +270,7 @@
   align-items: center;
   justify-content: center;
   font-size: 0px;
-  background-image: url('/src/assets/bageri.jpeg');
+  background-image: url('/src/assets/bageri.png');
   background-size: cover;
   background-position: center;
   color: transparent;
