--- a/frontend/src/styles/views/bakery/bakery-rankings.css
+++ b/frontend/src/styles/views/bakery/bakery-rankings.css
@@ -22,7 +22,7 @@
 .bakery-rankings {
   max-width: 900px;
   margin: 3rem auto;
-  width: 85%; 
+  width: 100%; 
 }
 
 .bakery-list {
@@ -108,6 +108,8 @@
 
 .bakery-image {
   width: 180px;
+  min-width: 160px;
+  max-width: 160px;
   height: 180px;
   background-color: var(--primary-light);
   display: flex;
@@ -116,6 +118,7 @@
   font-size: 0px; /* Hide text */
   position: relative;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .placeholder-image {
